# The-C-20-Masterclass-Source-Code

./: .gitignore  COMPILER_SUPPORT.md  LECTURE_ORGANIZATION.md  README.md  cpp23mc_curr_update
02.EnvironmentSetup/: environment_flow.drawio
02.EnvironmentSetup/01.ProjectTemplate/: main.cpp  utilities.cpp  utilities.h
02.EnvironmentSetup/1.CMakeStarterProject/: main.cpp
02.EnvironmentSetup/2.1ProjectTemplate/: CMakeLists.txt  CMakePresets.json  main.cpp  utilities.cpp  utilities.h  utilities.ixx  vcpkg.json
03.FirstSteps/02.FirstCppProgramBasics/: main.cpp  utilities.cpp  utilities.h  utilities.ixx
03.FirstSteps/03.CppProgramExecutionModel/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h  utilities.ixx
03.FirstSteps/04.GUIChallenge/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h  utilities.ixx
03.FirstSteps/3.1ProjectTemplate/: main.cpp
03.FirstSteps/3.2FirstCppProgram/: .gitignore  CMakeLists.txt  CMakePresets.json  main  main.cpp  utilities.cpp  utilities.h  utilities.ixx
03.FirstSteps/3.2FirstCppProgramBasics/: main.cpp
03.FirstSteps/3.3CppProgramExecutionModel/: CMakeLists.txt  main.cpp
03.FirstSteps/3.4ErrorsWarnings/: main  main.cpp
03.FirstSteps/3.4GUIChallenge/: CMakeLists.txt  (+2 more)
06.FlowControl/6.3Challenge_/: CMakeLists.txt  main.cpp
13.Namespaces/01.Namespace_basics/: CMakeLists.txt  anonymous_namespace.h  anonymous_namespace.ixx  create_namespace.h  create_namespace.ixx  cylinder.cpp  cylinder.h  default_global_namespace.cpp  default_global_namespace.h  default_global_namespace.ixx  main.cpp  namespace_aliases.h  nested_namespaces.cpp  nested_namespaces.h  nested_namespaces.ixx  point.cpp  point.h  point.ixx  utilities.cpp  utilities.h  utilities.ixx
14.Operator_overloading/01.Operator_overloading_basics/: CMakeLists.txt  main.cpp  op_overloading_1.ixx  op_overloading_2.ixx  op_overloading_3.ixx  op_overloading_4.ixx  op_overloading_5.ixx  op_overloading_6.ixx  utilities.ixx
17.Inheritance/02.Inheritance_constructors_destructors/: CMakeLists.txt  constr_and_inh.cpp  constr_and_inh.h  copy_constr_and_inh.cpp  copy_constr_and_inh.h  inh_and_destructors.cpp  inh_and_destructors.h  inh_default_arg_constr.cpp  inh_default_arg_constr.h  inherit_base_constructors.cpp  inherit_base_constructors.h  inherit_base_constructors.ixx  main.cpp  utilities.cpp  utilities.h
17.Inheritance/03.Reused_symbols_with_inheritance/: CMakeLists.txt  main.cpp  reused_symbols.h  reused_symbols.ixx  utilities.cpp  utilities.h
17.Polymorphism/17.03Final_access_spec_and_virtual/: CMakeLists.txt  main.cpp  no_poly_and_acc_spec.ixx  utilities.ixx
18.Exceptions/18.04Standard_exceptions/: CMakeLists.txt  throwing_std_exceptions.ixx  utilities.ixx
18.Polymorphism/01.Polymorphism_basics/: CMakeLists.txt  main.cpp  polymorphism.cpp  polymorphism.h  polymorphism.ixx  polymorphism_and_collections.cpp  polymorphism_and_collections.h  sizes_and_slicing.cpp  sizes_and_slicing.h  sizes_and_slicing.ixx  static_binding.cpp  static_binding.h  utilities.cpp  utilities.h
18.Polymorphism/02.Polymorphism_going_deep/: CMakeLists.txt  main.cpp  override_keyword.cpp  override_keyword.h  override_keyword.ixx  override_overload_and_hide.cpp  override_overload_and_hide.h  override_overload_and_hide.ixx  polymorphism_diff_levels.cpp  polymorphism_diff_levels.h  polymorphism_diff_levels.ixx  polymorphism_with_static_members.cpp  polymorphism_with_static_members.h  utilities.cpp  utilities.h
18.Polymorphism/03.Final_access_spec_and_virtual/: CMakeLists.txt  final.cpp  final.h  final.ixx  final_override_not_keywords.cpp  final_override_not_keywords.h  main.cpp  no_poly_and_acc_spec.cpp  no_poly_and_acc_spec.h  poly_func_and_acc_spec.cpp  poly_func_and_acc_spec.h  poly_func_and_acc_spec.ixx  utilities.cpp  utilities.h  virt_func_default_arg.cpp  virt_func_default_arg.h
18.Polymorphism/04.Polymorphism_casts_and_destructors/: CMakeLists.txt  dynamic_casts.cpp  dynamic_casts.h  main.cpp  poly_func_and_destructors.h  poly_func_and_destructors.ixx  typeid_operator.h  utilities.cpp  utilities.h  virtual_destructors.cpp  virtual_destructors.h
18.Polymorphism/05.Pure_virt_func_and_abstract_classes/: CMakeLists.txt  abstract_class_interfaces.cpp  abstract_class_interfaces.h  main.cpp  pure_virt_func_abstract_classes.cpp  pure_virt_func_abstract_classes.h  utilities.cpp  utilities.h  utilities.ixx
19.Exceptions/03.Exceptions_miscellenious/: CMakeLists.txt  ellipsis_catch_all.cpp  ellipsis_catch_all.h  ellipsis_catch_all.ixx  exceptions_in_destructors.h  exceptions_in_destructors.ixx  main.cpp  noexcept_specifier.cpp  noexcept_specifier.h  noexcept_specifier.ixx  rethrowing_exceptions.cpp  rethrowing_exceptions.h  utilities.cpp  utilities.h  utilities.ixx
21.Templates/02.Template_instantiations_and_specialization/: CMakeLists.txt  explicit_instantiation_declaration.cpp  explicit_instantiation_declaration.h  explicit_instantiation_definition.h  full_specialization.h  implicit_instantiations.h  main.cpp  partial_specialization.h  single_method_in_class.h  type_trait_example.h  utilities.cpp  utilities.h
24.STL_containers_iterators_ranges/05.Custom_container_iterators/: CMakeLists.txt  custom_iterators_01.h  custom_iterators_04.h  custom_iterators_05.h  custom_iterators_06.h  custom_iterators_07.h  custom_iterators_08.h  custom_iterators_08.ixx  custom_iterators_09.h  main.cpp  utilities.cpp  utilities.h  utilities.ixx
26.Coroutines/02.Third_party_coroutines/: CMakeLists.txt  main.cpp  practical_coro_01.h  practical_coro_02.h  utilities.cpp  utilities.h
37.Polymorphism/37.20AbstractClassesAsInterfaces/: CMakeLists.txt  animal.cpp  animal.h  bird.cpp  bird.h  cat.cpp  cat.h  crow.cpp  crow.h  dog.cpp  dog.h  feline.cpp  feline.h  main.cpp  pigeon.cpp  pigeon.h  stream_insertable.cpp  stream_insertable.h
38.Exceptions/38.6NestedTryBlocks/: CMakeLists.txt  main.cpp
49.Modules/48.6MultipleImplementationFiles/: CMakeLists.txt  README  main.cpp  math.ixx  math_impl.cpp  print_impl.cpp
49.Modules/48.6MultipleImplementationFiles/MultipleImplementationFiles/: math.cpp  math.ixx
(+2821 files in other folders)
